update-manager (1:0.76) UNRELEASED; urgency=low

  * DistUpgrade/DistUpgradeCache.py:
    - ensure that the util-linux -> nfs-common transition
      happens (LP: #141559)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 24 Sep 2007 19:49:17 +0200

update-manager (1:0.75) gutsy; urgency=low

  * DistUpgrade/DistUpgradeViewGtk.py:
    - work around broken vte forkpty() env add
  * DistUpgrade/DistUpgradeControler.py:
    - fix type of installed_demotions from apt.Package to pkgname
      (LP: #144417)
  * po/*.po:
    - updated from latest launchpad translations
  * UpdateManager/DistUpgradeFetcherCore.py:
    - fix missing command line propergation when run as non-root
      (LP: #144451)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 24 Sep 2007 10:52:16 +0200

update-manager (1:0.74) gutsy; urgency=low

  * DistUpgrade/DistUpgradeCache.py:
    - ensure that users with the "lowlatency" kernel get 
      transitioned correctly to a new kernel (LP: #129458)
  * DistUpgrade/DistUpgradeControler.py:
    - work around kde being too clever in tempdirs (LP: #139319)
  * po/POTFILES.in:
    - add missing files (LP: #141033)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 19 Sep 2007 23:15:39 +0100

update-manager (1:0.73) gutsy; urgency=low

  * UpdateManager/UpdateManager.py:
    - display new installs in the list
  * UpdateManager/Common/utils.py:
    - fix countrymirror to deal with non-utf8 locales (LP: #138299)
  * tests/test_update_origin.py:
    - added test for this country_mirror()
  * DistUpgrade/DistUpgradeControler.py:
    - check trust of pre-requists files before downloading them
    - support pre-requists on the CD as well
    - preserve the logs on self update from the net
  * DistUpgrade/build-tarball.sh:
    - fix auto-generation of target distro in cdromupgrade 
      script (LP:#138354) 
  * data/update-manager.8:
    - new manpage (thanks to  Bruno Mangin, LP: #107015)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 13 Sep 2007 15:42:34 +0200
