@@ -1,8 +1,13 @@
 update-manager (1:0.76) UNRELEASED; urgency=low
 
+  [ Michael Vogt ]
   * DistUpgrade/DistUpgradeCache.py:
     - ensure that the util-linux -> nfs-common transition
       happens (LP: #141559)
+
+  [ Jonathan Riddell ]
+  * DistUpgrade/DistUpgradeViewKDE.py:
+    - copy Xauthority file if necessary
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 24 Sep 2007 19:49:17 +0200
 
